fixes alignment of status icon

--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@
   font-family: var(--icon-font);
   font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 0, "opsz" 48;
   padding-right: 0.5em;
+  display: block;
+  margin-top: 2px;
 }
 
 .no_service {
